Allow runtime switching of canvas controllers

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   </head>
   <body>
     <canvas id="canvas" width="600" height="600"></canvas>
+    <select name="controller-type" id="controller-type">
+      <option value="random-walker">Random Walker</option>
+      <option value="random-number-distribution">Random Number Distribution</option>
+    </select>
     <script type="module" src="index.js"></script>
   </body>
 </html>
